@@ -30,7 +30,7 @@ names: ["evtxexport", "evtxinfo"]
 [cygwin]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cygevtx-0.dll"
 
 [gcc]
@@ -40,7 +40,7 @@ static_build_dependencies: []
 [mingw]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "libevtx-1.dll"
 
 [msvscpp]
