@@ -76,6 +76,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20141004
+* update Python-bindings tests
+
 20140929
 * removed README.macosx
 * changes for project site move
